<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_x_large"
    tools:context=".main.ui.fragment.view.LoginFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnLoginGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/redGoogle"
        app:cardCornerRadius="@dimen/radius_standard"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_standard"
            android:paddingVertical="@dimen/padding_small">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                app:srcCompat="@drawable/icon_google" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/masuk_dengan_google"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_large"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_x_large"
        android:text="@string/or"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/font_xx_large"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnLoginFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xx_small"
        app:cardBackgroundColor="@color/blueFacebook"
        app:cardCornerRadius="@dimen/radius_standard"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_standard"
            android:paddingVertical="@dimen/padding_small">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                app:srcCompat="@drawable/icon_facebook" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/masuk_dengan_facebook"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_large"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>