<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".main.ui.fragment.view.RecruitmentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueFacebook"
        android:paddingVertical="@dimen/padding_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/job_list"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_input_white"
            android:paddingHorizontal="@dimen/padding_small"
            android:paddingVertical="@dimen/padding_xx_small"
            app:layout_constraintEnd_toStartOf="@+id/linearFilter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearFilter">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/baseline_search"
                app:tint="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/inputQuery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:inputType="textCapWords"
                android:paddingStart="@dimen/padding_xx_small"
                android:paddingEnd="0dp"
                android:textColor="@color/black"
                android:textSize="@dimen/font_standard" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgArrowFilter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:rotation="90"
                app:srcCompat="@drawable/baseline_arrow_forward"
                app:tint="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_standard"
            android:visibility="gone"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/radius_standard"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearFilter">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_small"
                android:paddingTop="0dp"
                android:paddingBottom="@dimen/padding_small">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtTitleFilterFulltime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/fulltime"
                    android:textColor="@color/warmGrey"
                    android:textSize="@dimen/font_standard"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/switchFulltime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/switchFulltime" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchFulltime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtTitleFilterLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/location"
                    android:textColor="@color/warmGrey"
                    android:textSize="@dimen/font_standard"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/inputLocation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/inputLocation" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_standard"
                    android:layout_marginTop="@dimen/margin_xx_small"
                    android:background="@drawable/bg_input_stroke_gray"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"
                    android:paddingHorizontal="@dimen/padding_small"
                    android:paddingVertical="@dimen/padding_xx_small"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txtTitleFilterLocation"
                    app:layout_constraintTop_toBottomOf="@+id/switchFulltime" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/margin_xx_small"
                    android:text="@string/apply_filter"
                    android:textAllCaps="false"
                    app:cornerRadius="@dimen/radius_huge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/inputLocation" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecruitment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/padding_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintToolbar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearNotFound"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintToolbar">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_huge"
            android:gravity="center"
            android:padding="@dimen/padding_standard"
            android:text="@string/search_not_found"
            android:textColor="@color/black"
            android:textSize="@dimen/font_xx_large"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>